--- a/templates/edit_entry.html
+++ b/templates/edit_entry.html
@@ -36,6 +36,7 @@
             <p class="error">{{ error }}</p>
         {% endif %}
         <form class="entry-form" method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <label> Juoksun pituus*:</label>
             <div class="inline-inputs">
                 <input type="number" name="km" value="{{ entry['distance_km']}}" min="0" max="999" required>
@@ -74,8 +75,9 @@
 
             <button type="submit">Tallenna muutokset</button>
         </form>
-        <form method="POST" action= "{{ url_for('delete_entry', entry_id=entry['id']) }}" onsubmit="return confirm('Poistetaanko merkintä? Tätä toimintoa ei voi perua');">
-                <button type="submit">Poista merkintä</button>
+        <form method="POST" action= "{{ url_for('delete_entry_route', entry_id=entry['id']) }}" onsubmit="return confirm('Poistetaanko merkintä? Tätä toimintoa ei voi perua');">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+            <button type="submit">Poista merkintä</button>
         </form>
     </main>
 
