--- a/templates/register.html
+++ b/templates/register.html
@@ -36,7 +36,7 @@
             <p class="error">{{ error }}</p>
         {% endif %}
         <form class="register-form" method="POST" action="/register">
-
+            <input type="hidden" name="csrf_token" value= "{{ csrf_token() }}">
             <label for="fname">Etunimi*:</label>
             <input type="text" id="fname" name="fname" placeholder="Etunimesi" required>
             <label for="lname">Sukunimi*:</label>
